--- a/src/build.gradle
+++ b/src/build.gradle
@@ -8,6 +8,7 @@ buildscript {
 
         coroutines_version = "1.6.4"
         compose_version = "1.3.0-beta02"
+        compose_compiler = "1.3.1"
         android_core_version = "1.9.0"
         material_version = "1.0.0-beta02"
         lifecycle_version = "2.5.1"
