--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -16,3 +16,5 @@ rootProject.name = "TrackR"
 include ':app'
 include ':app:core-data'
 include ':app:core-ui'
+include ':app:core-navigation'
+include ':app:feature-overview'
