more ui changes

--- a/src/app/core/data/build.gradle
+++ b/src/app/core/data/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id "com.android.library"
     id "org.jetbrains.kotlin.android"
+    id "kotlin-kapt"
 }
 
 android {
@@ -9,6 +10,10 @@ android {
     defaultConfig {
         minSdk "$min_sdk".toInteger()
         targetSdk "$target_sdk".toInteger()
+
+        // Build Config fields
+        buildConfigField "String", "APP_ID", "\"$app_id\""
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
@@ -32,9 +37,11 @@ dependencies {
     def room_version = "2.4.3"
     def crypto = "1.0.0"
 
-    api "androidx.security:security-crypto:$crypto"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "androidx.security:security-crypto:$crypto"
     implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
     testImplementation "androidx.room:room-testing:$room_version"
 }
