--- a/src/settings.gradle
+++ b/src/settings.gradle
@@ -21,3 +21,5 @@ include ':app:feature:overview'
 include ':app:core'
 include ':app:feature:transactions'
 include ':app:feature:settings'
+include ':app:core:constants'
+include ':app:core:utils'
