--- a/src/app/core/data/build.gradle
+++ b/src/app/core/data/build.gradle
@@ -36,8 +36,10 @@ android {
 dependencies {
     def room_version = "2.4.3"
     def crypto = "1.0.0"
+    def paging_version = '3.1.1'
 
-    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
     implementation "androidx.security:security-crypto:$crypto"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
