--- a/src/app/core/ui/build.gradle
+++ b/src/app/core/ui/build.gradle
@@ -35,22 +35,24 @@ android {
 }
 
 dependencies {
-    project(":app:core:data")
+    implementation project(":app:core:data")
+    implementation project(":app:core:constants")
+    implementation project(":app:core:utils")
 
     // Jank Stats
     api 'androidx.metrics:metrics-performance:1.0.0-alpha03'
 
     // compose & material
-    api "androidx.core:core-ktx:$android_core_version"
-    api "androidx.activity:activity-compose:$activity_compose_version"
-    api "androidx.compose.ui:ui:$compose_version"
-    api "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    api "androidx.core:core-ktx:1.9.0"
+    api "androidx.activity:activity-compose:1.6.0"
+    api "androidx.compose.ui:ui:1.2.1"
+    api "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
     api "androidx.compose.material3:material3:$material_version"
-    api "androidx.compose.material:material:$material2_version"
-    api "androidx.core:core-splashscreen:$splashscreen_version"
-    api "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    androidTestApi "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugApi "androidx.compose.ui:ui-tooling:$compose_version"
-    debugApi "androidx.compose.ui:ui-test-manifest:$compose_version"
+    api "androidx.compose.material:material:1.2.1"
+    api "androidx.core:core-splashscreen:1.0.0"
+    api "androidx.compose.ui:ui-tooling-preview:1.2.1"
+    androidTestApi "androidx.compose.ui:ui-test-junit4:1.2.1"
+    debugApi "androidx.compose.ui:ui-tooling:1.2.1"
+    debugApi "androidx.compose.ui:ui-test-manifest:1.2.1"
 
 }
